--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2 class="typewriter">Applied Computer Science Student | Cybersecurity Enthusiast</h2>
                 <p class="tagline">I'm a cybersecurity student passionate about defending systems and understanding how things work under the hood.</p>
                 <div class="cta-buttons">
-                    <a href="files/jhonathanCV.pdf"  target="_blank" class="btn btn-primary">Download CV</a>
+                    <a href="files/JhonathanCV.pdf"  target="_blank" class="btn btn-primary">Download CV</a>
                     <a href="#contact" class="btn btn-secondary">Contact Me</a>
                 </div>
             </div>
