--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-linkedin"></i>
-                        <a href="https://linkedin.com/in/jhonathan-carrillo-higuera" target="_blank">linkedin.com/in/jhonathan-carrillo-higuera</a>
+                        <a href="www.linkedin.com/in/carrillo17" target="_blank">linkedin</a>
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-github"></i>
